--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git config --global user.name "github-actions[bot]"
             git checkout -b integration-ecs
-            git add .
+            git add *
             git commit -m "Replicating PR from integration to integration-ecs"
             git push origin integration-ecs
           env:
