--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@
       steps:
         - name: Push code from integration to integration-ecs branch
           run: |
+            git init
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git config --global user.name "github-actions[bot]"
             git checkout origin/integration-ecs
